<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StoryTeller</string>
    <string name="opneOne">Open One Audio</string>
    <string name="play">Play</string>
    <string name="playForward">Play Forward</string>
    <string name="stop">Stop</string>
    <string name="playRewind">Rewind</string>
    <string name="hintOfPlayFile">Select a file to play</string>
    <string name="openFolder">Open a folder to play</string>
    <string name="labelPath">Path:</string>
    <string name="labelAlbum">Album:</string>
    <string name="labelArtist">Artist:</string>
    <string name="labelDuration">Duration:</string>
    <string name="toExpandOrCollapse">To expand or collapse</string>
    <string name="noMediaToPlay">No media can be played now!</string>
    <string name="cannotPlayMedia">Cannot play the media!</string>
    <string name="playingSetting">Playing Setting</string>
    <string name="playingSettingDesc">Define something for playing</string>
    <string name="autoStartOn">Start playing when the app starts</string>
    <string name="autoStartOff">Do not start playing when the app starts</string>
    <string name="autoStartTitle">Start playing automatically</string>
    <string name="audioFocusPlayNotAllowed">The player is not allowed to play right now</string>
    <string name="playOrder">Play order</string>
    <string name="playOrderSumByName">Play the items in the order of the name</string>
    <string name="playOrderSumRandom">Play the items randomly</string>
    <string name="pageTitleMediaInfo">Information</string>
    <string name="pageTitleVisualizer">Visualization</string>
    <string name="menuMode">Mode</string>
    <string name="modeMusic">Music</string>
    <string name="modeStudy">Study</string>
    <string name="modeReading">Reading</string>
    <string name="modeCustom">Custom</string>
    <string name="modeChangeConfirm">Continue to changing the current setting of palying</string>
    <string name="toContinue">Continue</string>
    <string name="infoOfModeChanged">Setting of playing changed</string>
    <string name="inputError">Input error, nothing changed</string>
    <string name="permissionRequestTitle">Request for permission</string>
    <string name="permissionRequestMicrophone">Request for permission of microphone, to display audio visialization and pause.</string>
    <string name="permissionNoMicrophone">No permission of microphone, cannot display audio visialization and pause automatically.</string>
    <string name="empty_string"></string>
    <string name="menuOpen">Open</string>
    
</resources>
