<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="5dp"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/layoutFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutController" >

        <ImageView
            android:id="@+id/imageViewOpenOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/opneOne"
            android:onClick="onOpenOne"
            android:src="@drawable/open_one" />

        <ImageView
            android:id="@+id/imageViewOpenFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/openFolder"
            android:onClick="onOpenFolder"
            android:src="@drawable/open_folder" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutController"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp" >

        <ImageView
            android:id="@+id/imageViewForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageViewPlay"
            android:contentDescription="@string/playForward"
            android:src="@drawable/play_forward" />

        <ImageView
            android:id="@+id/imageViewStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageViewRewind"
            android:clickable="true"
            android:contentDescription="@string/stop"
            android:onClick="onStop"
            android:src="@drawable/stop" />

        <ImageView
            android:id="@+id/imageViewPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/imageViewStop"
            android:clickable="true"
            android:contentDescription="@string/play"
            android:onClick="onPlayPause"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/imageViewRewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageViewPrevious"
            android:contentDescription="@string/playRewind"
            android:src="@drawable/play_rewind" />

        <ImageView
            android:id="@+id/imageViewNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageViewForward"
            android:onClick="onNext"
            android:src="@drawable/play_next" />

        <ImageView
            android:id="@+id/imageViewPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:onClick="onPrevious"
            android:src="@drawable/play_prev" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewPlayingFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/hintOfPlayFile"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutFile"
        android:layout_below="@id/textViewPlayingFile"
        android:orientation="vertical" >

        <com.zsm.storyteller.ui.MediaInfoView
            android:id="@+id/viewMediaInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </com.zsm.storyteller.ui.MediaInfoView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/infoListSeparator"
            android:orientation="vertical" >

        </LinearLayout>

        <ExpandableListView
            android:id="@+id/listPlayList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/defaultPadding"
            android:layout_weight="1"
            android:groupIndicator="@null" >

        </ExpandableListView>

    </LinearLayout>

</RelativeLayout>