<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageViewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/cancel" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableRow
            android:id="@+id/tableRowAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/labelAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelAlbum"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelAlbum"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/labelArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelArtist"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/TextViewArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelArtist"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRowDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/labelDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelDuration"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/TextViewDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelDuration"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/labelPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/textViewPath"
                android:text="@string/labelPath"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelPath"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

    </TableLayout>

</LinearLayout>
